--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.25.0",
+    "@monaco-editor/react": "^4.7.0",
     "convex": "^1.25.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "svix": "^1.69.0"
+    "react-hook-form": "^7.60.0",
+    "react-hooks": "^1.0.1",
+    "svix": "^1.69.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
