--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-hooks": "^1.0.1",
+    "react-hot-toast": "^2.5.2",
     "svix": "^1.69.0",
     "zustand": "^5.0.6"
   },
