--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.60.0",
     "react-hooks": "^1.0.1",
     "react-hot-toast": "^2.5.2",
+    "react-syntax-highlighter": "^15.6.1",
     "svix": "^1.69.0",
     "zustand": "^5.0.6"
   },
@@ -29,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "tailwindcss": "^4",
